--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,9 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@clerk/nextjs": "^6.36.5",
+    "@prisma/client": "^6.9.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.0",
     "@trpc/client": "^11.1.0",
@@ -32,7 +34,9 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-hook-form": "^7.69.0",
     "react-dom": "^19.1.1",
+    "lucide-react": "^0.511.0",
     "sonner": "^2.0.7",
     "zod": "^3.24.0"
   },
