--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,8 +19,10 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
     "@clerk/nextjs": "^6.36.5",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.9.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.0",
@@ -30,13 +32,14 @@
     "@workspace/api": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "date-fns": "^4.1.0",
     "jiti": "^2.4.2",
+    "lucide-react": "^0.511.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-hook-form": "^7.69.0",
     "react-dom": "^19.1.1",
-    "lucide-react": "^0.511.0",
+    "react-hook-form": "^7.69.0",
     "sonner": "^2.0.7",
     "zod": "^3.24.0"
   },
