--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -7,5 +7,8 @@ CLERK_SECRET_KEY=sk_test_...
 # Get this from https://supabase.com → Project Settings → Database → Connection string (URI)
 DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
 
+# UploadThing (https://uploadthing.com/dashboard)
+UPLOADTHING_TOKEN=your_token_here
+
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
