--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "@trpc/client": "^11.1.0",
     "@trpc/server": "^11.1.0",
     "@trpc/tanstack-react-query": "^11.1.0",
+    "@uploadthing/react": "^7.3.3",
     "@workspace/api": "workspace:*",
     "@workspace/db": "workspace:*",
     "@workspace/ui": "workspace:*",
@@ -40,8 +41,10 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.69.0",
     "sonner": "^2.0.7",
+    "uploadthing": "^7.7.4",
     "zod": "^3.24.0"
   },
   "devDependencies": {
