chore: github integration

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -10,5 +10,10 @@ DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].poole
 # UploadThing (https://uploadthing.com/dashboard)
 UPLOADTHING_TOKEN=your_token_here
 
+# GitHub (optional — enables contributor stats)
+# Create a Personal Access Token (classic) at https://github.com/settings/tokens
+# No scopes needed for public repos; add "repo" scope for private repos
+GITHUB_TOKEN=ghp_...
+
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
