--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.69.0",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "uploadthing": "^7.7.4",
     "zod": "^3.24.0"
