--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
     "@workspace/typescript-config": "workspace:*",
+    "baseline-browser-mapping": "^2.9.19",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
