--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "node": ">=20",
     "bun": ">=1.3.5"
   },
-  "packageManager": "bun@1.3.5"
+  "packageManager": "bun@1.3.5",
+  "dependencies": {
+    "@clerk/themes": "^2.4.54"
+  }
 }
