--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,5 +15,5 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "__tests__/**/*"]
+  "exclude": ["node_modules"]
 }
