--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,47 +66,8 @@ jobs:
         run: bun run test
         working-directory: apps/web
 
-  e2e:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    env:
-      CI: true
-      CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
-      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      - name: Install Playwright browsers
-        run: bunx playwright install --with-deps chromium
-        working-directory: apps/web
-
-      - name: Run E2E tests
-        run: bun run test:e2e
-        working-directory: apps/web
-
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: playwright-report
-          path: apps/web/playwright-report/
-          retention-days: 7
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: test-results
-          path: apps/web/test-results/
-          retention-days: 7
+  # TODO: Re-enable E2E tests once staging environment is set up
+  # e2e:
+  #   name: E2E Tests
+  #   runs-on: ubuntu-latest
+  #   ...
