--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "biome check --write .",
     "lint:types": "tsc --noEmit",
     "typecheck": "tsc --noEmit",
+    "ci": "bun run lint && bun run typecheck && bun run test",
     "test": "bun test __tests__",
     "test:watch": "bun test __tests__ --watch",
     "test:e2e": "playwright test",
@@ -71,6 +72,7 @@
     "@clerk/testing": "^1.13.26",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/bun": "^1.3.9",
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
