--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "biome:format": "biome format --write .",
     "prepare": "husky",
     "test": "bun --filter=web test __tests__",
-    "test:e2e": "bun --filter=web test:e2e"
+    "test:e2e": "bun --filter=web test:e2e",
+    "knip": "knip"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
     "@workspace/typescript-config": "workspace:*",
     "baseline-browser-mapping": "^2.9.19",
     "husky": "^9.1.7",
+    "knip": "^5.84.1",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "turbo": "^2.7.4",
