--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,13 @@
         "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
         "NEXT_PUBLIC_APP_URL",
         "SKIP_ENV_VALIDATION",
-        "UPLOADTHING_TOKEN"
+        "UPLOADTHING_TOKEN",
+        "UPSTASH_REDIS_REST_URL",
+        "UPSTASH_REDIS_REST_TOKEN",
+        "QSTASH_URL",
+        "QSTASH_TOKEN",
+        "QSTASH_CURRENT_SIGNING_KEY",
+        "QSTASH_NEXT_SIGNING_KEY"
       ]
     },
     "lint": {
