--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,9 +15,11 @@
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
     "@workspace/db": "workspace:*",
+    "next": "^16.0.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.9",
     "@workspace/typescript-config": "workspace:*",
     "typescript": "^5.9.2"
   },
