--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -4,8 +4,13 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
 CLERK_SECRET_KEY=sk_test_...
 
 # Database (Supabase PostgreSQL)
-# Get this from https://supabase.com → Project Settings → Database → Connection string (URI)
+# Pooled connection (for app runtime)
+# Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Connection pooling
 DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
+
+# Direct connection (for Prisma CLI: db push, migrate, studio)
+# Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Direct
+DIRECT_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
 
 # UploadThing (https://uploadthing.com/dashboard)
 UPLOADTHING_TOKEN=your_token_here
