--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,7 +23,7 @@
     "@clerk/nextjs": "^6.36.5",
     "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "~6.9.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.75.0",
     "@tanstack/react-table": "^8.21.3",
