--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,6 +59,7 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@clerk/testing": "^1.14.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/bun": "^1.3.9",
