--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@workspace/typescript-config": "workspace:*",
     "prisma": "~6.9.0",
+    "supabase": "^2.76.12",
     "typescript": "^5.9.2"
   },
   "exports": {
