--- a/packages/db/.env.example
+++ b/packages/db/.env.example
@@ -1,7 +1,7 @@
 # Direct connection (for Prisma CLI: db push, migrate, studio)
 # Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Direct
-DIRECT_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
+POSTGRES_URL_NON_POOLING=postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
 
-# Pooled connection (for app runtime)
+# Pooled connection (for app runtime) — matches Supabase-Vercel integration naming
 # Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Connection pooling
-DATABASE_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
+POSTGRES_PRISMA_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true
