--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules
 # Local env files
 .env
 .env.local
+.env.local.*
+.env.prod
+.env.preview
 .env.development.local
 .env.test.local
 .env.production.local
