--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -33,5 +33,10 @@ QSTASH_TOKEN=your_token_here
 QSTASH_CURRENT_SIGNING_KEY=your_key_here
 QSTASH_NEXT_SIGNING_KEY=your_key_here
 
+# E2E test database reset (preview deployments only)
+# Generate a random secret: openssl rand -hex 32
+# Set this in Vercel preview environment variables AND as a GitHub Actions secret
+# E2E_RESET_SECRET=your_random_secret_here
+
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
