--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "biome:check": "biome check .",
     "biome:fix": "biome check --write .",
     "biome:format": "biome format --write .",
     "prepare": "husky",
-    "test": "bun run --filter=web test && bun run --filter=@workspace/api test",
+    "test": "turbo test",
+    "ci": "turbo ci",
     "test:e2e": "bun --filter=web test:e2e",
     "knip": "knip"
   },
