--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "~6.9.0",
     "@t3-oss/env-nextjs": "^0.12.0",
