feat: admin managment

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -33,6 +33,11 @@ QSTASH_TOKEN=your_token_here
 QSTASH_CURRENT_SIGNING_KEY=your_key_here
 QSTASH_NEXT_SIGNING_KEY=your_key_here
 
+# Clerk Webhook (auto-links Person records on signup)
+# Create a webhook at https://dashboard.clerk.com → Webhooks → Add Endpoint
+# Set event: user.created, copy the Signing Secret
+# CLERK_WEBHOOK_SECRET=whsec_...
+
 # E2E test database reset (preview deployments only)
 # Generate a random secret: openssl rand -hex 32
 # Set this in Vercel preview environment variables AND as a GitHub Actions secret
