--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
+    "env:local": "cp .env.local.local .env.local && cp ../../packages/db/.env.local-template ../../packages/db/.env && echo 'Switched to LOCAL database (supabase start)'",
     "env:prod": "cp .env.local.prod .env.local && cp ../../packages/db/.env.prod ../../packages/db/.env && echo 'Switched to PRODUCTION database'",
     "env:preview": "cp .env.local.preview .env.local && cp ../../packages/db/.env.preview ../../packages/db/.env && echo 'Switched to PREVIEW database'"
   },
@@ -59,6 +60,7 @@
     "react-hook-form": "^7.69.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
+    "svix": "^1.85.0",
     "uploadthing": "^7.7.4",
     "zod": "^3.24.0"
   },
