--- a/biome.json
+++ b/biome.json
@@ -1,45 +1,50 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.4.2/schema.json",
-  "vcs": {
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "formatter": {
     "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineWidth": 100
   },
-  "files": {
-    "ignoreUnknown": false
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "correctness": {
+        "noUnusedImports": "warn",
+        "useExhaustiveDependencies": "warn"
+      },
+      "style": { "noNonNullAssertion": "off" },
+      "suspicious": { "noExplicitAny": "warn" },
+      "performance": { "noImgElement": "off" },
+      "a11y": {
+        "noStaticElementInteractions": "warn",
+        "useKeyWithClickEvents": "warn"
+      }
+    }
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double",
+      "semicolons": "always",
+      "trailingCommas": "all",
+      "arrowParentheses": "always"
+    }
+  },
+  "css": {
+    "parser": { "tailwindDirectives": true },
+    "formatter": { "enabled": true, "indentStyle": "space", "indentWidth": 2 }
   },
   "overrides": [
     {
       "includes": ["**/*.css"],
-      "linter": { "enabled": false },
-      "formatter": { "enabled": false }
-    },
-    {
-      "includes": ["**/__tests__/**/*"],
       "linter": { "enabled": false }
     }
   ],
-  "formatter": {
+  "vcs": {
     "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2
-  },
-  "linter": {
-    "enabled": true,
-    "rules": { "recommended": true }
-  },
-  "css": {
-    "parser": { "tailwindDirectives": true }
-  },
-  "javascript": {
-    "formatter": { "quoteStyle": "double" }
-  },
-  "assist": {
-    "enabled": true,
-    "actions": {
-      "source": {
-        "organizeImports": "on"
-      }
-    }
+    "clientKind": "git",
+    "useIgnoreFile": true
   }
 }
