--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,6 +62,7 @@
     "sonner": "^2.0.7",
     "svix": "^1.85.0",
     "uploadthing": "^7.7.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.0"
   },
   "devDependencies": {
