--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -74,6 +74,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@workspace/typescript-config": "workspace:*",
+    "babel-plugin-react-compiler": "^1.0.0",
     "dotenv": "^16.6.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
