--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "test": "turbo test",
     "ci": "turbo ci",
     "test:e2e": "bun --filter=web test:e2e",
-    "knip": "knip"
+    "knip": "knip",
+    "changeset": "changeset",
+    "changeset:version": "changeset version"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@changesets/cli": "^2.29.8",
     "@workspace/typescript-config": "workspace:*",
     "knip": "^5.84.1",
     "lefthook": "^2.1.1",
