--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -37,5 +37,14 @@ QSTASH_NEXT_SIGNING_KEY=your_key_here
 # Set this in Vercel preview environment variables AND as a GitHub Actions secret
 # E2E_RESET_SECRET=your_random_secret_here
 
+# E2E Testing — Clerk test user credentials
+# Create a test user in Clerk dashboard, then set these values
+# E2E_CLERK_USER_USERNAME=e2e-test@yourdomain.com
+# E2E_CLERK_USER_PASSWORD=your_test_password
+# E2E_CLERK_USER_ID — the Clerk user ID (user_xxx) of the test account above
+# Required for Goals CRUD and manager-edit E2E tests (links person-alice to test user)
+# Set in .env, GitHub Actions secrets, AND Vercel Preview env vars
+# E2E_CLERK_USER_ID=user_xxx
+
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
