--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -6,7 +6,8 @@ CLERK_SECRET_KEY=sk_test_...
 # Database (Supabase PostgreSQL)
 # Pooled connection (for app runtime) — matches Supabase-Vercel integration naming
 # Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Connection pooling
-POSTGRES_PRISMA_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true
+# connection_limit: tune to (CPU cores * 2) + 1 for your Supabase plan (Free/Pro ~2 cores → 5)
+POSTGRES_PRISMA_URL=postgresql://postgres.[PROJECT_REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=5
 
 # Direct connection (for Prisma CLI: db push, migrate, studio)
 # Get this from https://supabase.com → Project Settings → Database → Connection string (URI) → Direct
